# readthis

./: .gitignore  README.md  html_parser.py  install_instructions.md  mcp_settings_example.json  mock_mcp_test.py  pyproject.toml  readthis.json  requirements.txt  server.py  test_readthis.py  test_reload_manual_integration.py
