[project]
name = "readthis"
version = "0.1.0"
description = "ドキュメント参照のためのMCPプラグイン"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "trafilatura>=1.4.0",
    "mcp>=1.3.0",
    "types-requests>=2.32.0.20250306",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
